# space_packet_parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pycodestyle.ini  pylintrc  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: docker-image.yml  pr_tests.yml  release.yml  run-pycodestyle.yml  run-pylint.yml  test-python-version.yml  tests.yml
docs/source/: benchmarking.md  browser-demo.rst  changelog.md  conf.py  contents.rst  developers.md  examples.md  index.rst  users.md  xtce_variable_length_packets.md
docs/source/_static/: browser-parsing.html  pyodide_parse_packets.js
examples/: csv_to_xtce_conversion.py  parsing_and_plotting_idex_waveforms_from_socket.py
space_packet_parser/: __init__.py  calibrators.py  cli.py  common.py  comparisons.py  containers.py  converters.py  csvdef.py  definitions.py  encodings.py  exceptions.py  mixins.py  packets.py  parameters.py  parseables.py  parser.py  xarr.py  xtce.py  xtcedef.py
space_packet_parser/xtce/: __init__.py  calibrators.py  comparisons.py  containers.py  definitions.py  encodings.py  parameter_types.py  parameters.py
tests/: conftest.py
tests/benchmark/: test_benchmarks.py  test_fast_benchmarks.py  test_slow_benchmarks.py  test_xtce_parsing_benchmarks.py
tests/integration/: test_bufferedreader_parsing.py  test_cli.py  test_socket_parsing.py  test_xarr.py
tests/integration/test_csv_based_parsing/: test_ctim_parsing.py
tests/integration/test_xtce_based_parsing/: test_ctim_parsing.py  test_inheritance_restrictions.py  test_jpss_parsing.py  test_suda_parsing.py
tests/test_data/: expected_excel_xtce.xml  test_xtce.xml  test_xtce_invalid.xml  test_xtce_no_namespace.xml  test_xtce_unsupported_array_type.xml
tests/test_data/ctim/: ccsds_2021_155_14_39_51  ct_tlm.csv  ctim_xtce_v1.xml
tests/test_data/idex/: idex_combined_science_definition.xml  sciData_2023_052_14_45_05
tests/test_data/jpss/: J01_G011_LZ_2021-04-09T00-00-00Z_V01.DAT1  ccsdspy_jpss1_geolocation.csv  contrived_inheritance_structure.xml  jpss1_geolocation_xtce_v1.xml
tests/test_data/suda/: sciData_2022_130_17_41_53.spl  suda_combined_science_definition.xml
tests/unit/: test_calibrators.py  test_common.py  test_comparisons.py  test_containers.py  test_converters.py  test_csvdef.py  test_definitions.py  test_encodings.py  test_mixins.py  test_packets.py  test_parameters.py  test_parseables.py  test_parser.py  test_space_packet_parser.py  test_xtcedef.py
tests/unit/test_xtce/: test_calibrators.py  test_comparisons.py  test_definitions.py  test_encodings.py  test_parameter_types.py  test_parameters.py
